[package]
edition = "2021"
license = "GPL-3.0-or-later"
name    = "long-ass-link"
version = "0.1.0"

[dependencies]
nanoid = "0.4.0"

[dependencies.rocket]
features = ["json"]
version  = "0.5.0"

[dependencies.rocket_db_pools]
default-features = false
features         = ["sqlx", "sqlx_macros", "sqlx_postgres"]
version          = "0.1.0"

[dependencies.rocket-governor]
features = ["limit_info"]
version  = "0.2.0-rc.1"

[dependencies.sqlx]
default-features = false
features         = ["postgres", "json", "macros", "migrate", "uuid", "time"]
version          = "0.7.3"

[dependencies.time]
features = ["macros"]
version  = "0.3.30"
